# Todolist

./: .gitignore  BUILD_GUIDE.md  README.md  index.html  package-lock.json  package.json  pet.html  vite.config.ts  需求文档.md
.github/workflows/: build.yml  simple-test.yml  test.yml
src/: App.vue  env.d.ts  main.ts  pet.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_client.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  scheduler.rs  tray.rs
src/components/: AiInput.vue  AiInput.vue.bak  AllTasks.vue  SettingsDialog.vue  TodayTasks.vue
src/router/: index.ts
src/stores/: config.ts  task.ts
src/styles/: main.scss
src/types/: index.ts
src/views/: MainView.vue  PetWindow.vue
